--- a/assign3_Carlos_Carbajal-19174/CSS_files/menu_style.css
+++ b/assign3_Carlos_Carbajal-19174/CSS_files/menu_style.css
@@ -91,6 +91,7 @@ footer {
 background-color: #D03731;
 color:white;
 margin-bottom: 0px;
+padding-top: 10px;
 height:80px;
 text-align:center;
 bottom:0;
