--- a/assign3_Carlos_Carbajal-19174/CSS_files/menu_style.css
+++ b/assign3_Carlos_Carbajal-19174/CSS_files/menu_style.css
@@ -186,6 +186,15 @@ a {
     margin: 0 auto;
 }
 
+.orderbtn:hover {
+    transform:scale(1.05);
+    cursor:pointer;
+}
+
+.ordering label{
+    font-size:20px;
+}
+
 .menudisplay details p {
     padding:0 30%;
     text-align: center;
@@ -201,6 +210,10 @@ a {
     margin-top:100px;
     text-align:center;
 
+}
+
+.checkoutcontainer {
+    display:none;
 }
 
 #submitbtn {
