--- a/assign3_Carlos_Carbajal-19174/CSS_files/menu_style.css
+++ b/assign3_Carlos_Carbajal-19174/CSS_files/menu_style.css
@@ -169,6 +169,7 @@ a {
     height:290px;
     object-fit:contain;
     border:5px dashed #D03731;
+    background-color: rgb(34, 32, 32, 40%);
 }
 
 .currentmenu summary {
@@ -207,10 +208,11 @@ a {
 }
 
 .foodform {
+    background-color: rgb(34, 32, 32, 40%);
     display:block;
     position:relative;
     bottom:80px;
-    padding:10px 40%;
+    padding:10px 35%;
     padding-top: 20px;
     margin-top:100px;
     text-align:center;
@@ -235,6 +237,15 @@ a {
 .ordersummary {
     text-align:center;
     font-size:25px;
+}
+
+.items-inCart {
+    display:block;
+    margin-left:45%;
+    margin-right:30%;
+}
+.items-inCart li{
+    text-align: left;
 }
 
 @media screen and (max-width:600px){
